--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-# ---- LLM 路徑 ----
-MODEL_PATH=models/llm/phi-2.Q4_K_S.gguf
-EMBED_MODEL=models/embed/pytorch_model.bin
-USE_GPU=true
-N_CTX=2048
+# Local environment
+
+
+# MODEL_PATH=models/llm/phi-2.Q4_K_S.gguf
+# EMBED_MODEL=intfloat/e5-small-v2
+# USE_GPU=true
+# N_CTX=2048
 
 # ---- MSSQL ----
 MSSQL_SERVER=140.118.115.196
@@ -17,8 +19,19 @@ MSSQL_CHARSET=utf8
 # MSSQL_CHARSET=utf8
 
 # ---- Milvus ----
-MILVUS_URI  = tcp://standalone:19530
+MILVUS_URI  = tcp://milvus-standalone-alan:19530 # Running in docker
+# MILVUS_URI  = tcp://localhost:19531  # Running in local
 MILVUS_USER = root
 MILVUS_PASS = 
 
 # (Open WebUI 不需額外設定；自動連到 http://api:1010/v1)
+# Ollama 配置
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1:8b
+OLLAMA_TEMPERATURE=0.2
+
+
+PDF_DIRECTORY_PATH = "data/pdf" 
+MILVUS_HOST = "milvus-standalone-alan"
+MILVUS_PORT = "19530"
+COLLECTION_NAME = "pdf_collection_from_folder"
