--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # ---- LLM 路徑 ----
-MODEL_PATH=models/llm/phi-2.Q4_K_S.gguf
-EMBED_MODEL=intfloat/e5-small-v2   # local host location: models/embed/...
-USE_GPU=true
+# MODEL_PATH=models/llm/phi-2.Q4_K_S.gguf
+# EMBED_MODEL=intfloat/e5-small-v2   # local host location: models/embed/...
+# USE_GPU=true
 
 # ---- MSSQL ----
 MSSQL_SERVER=xxx.xxx.xxx.xxx
@@ -11,6 +11,6 @@ MSSQL_PASSWORD=xxxxxxx
 MSSQL_CHARSET=utf8
 
 # ---- Milvus ----
-MILVUS_URI=tcp://milvus:19530
+# MILVUS_URI=tcp://localhost:19531
 
 # (Open WebUI  http://api:1010/v1)
